--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -9,7 +9,7 @@ body {
     width: 100%;
     height: 100%;
     font: 16px/2 'Roboto Mono';
-    background-color: #2a363b;
+    background-color: #2d1180;
     color: white;
 }
 
