--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -62,6 +62,11 @@ li button:hover {
   position: relative;
 }
 
+.card a:hover{
+  background-color: #1b1e26;
+  text-decoration: none;
+}
+
 a:link {
   text-decoration: none;
 }
