--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -28,6 +28,30 @@ h1 {
   font-weight: bold;
 }
 
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+.errortxt {
+  font-size: 11px;
+}
+
 ul {
     list-style-type: square;
     padding: 0 1em;
