--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -5,6 +5,7 @@ body {
     align-items: center;
     flex-flow: column nowrap;
     margin: 0;
+    scroll-behavior: smooth;
 
     width: 100%;
     height: 100%;
