changed colo(u)r of scrollbar

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -36,17 +36,17 @@ h1 {
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: #f1f1f1;
+  background: #0d1326;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #888;
+  background: #e6a800;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #555;
+  background: #cc9600;
 }
 
 .errortxt {
