--- a/src/css/style.css
+++ b/src/css/style.css
@@ -122,6 +122,16 @@ main {
   position: relative;
 }
 
+canvas {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+#spacer {
+  position: relative;
+}
+
 a {
   padding-left: 1em;
 }
